# freenet-email

./: AGENTS.md  Cargo.toml  Makefile.toml
.github/workflows/: build.yml  check-contract-wasm.yml
contracts/inbox/: Cargo.toml
contracts/inbox/src/: lib.rs
contracts/inbox/tests/: integration.rs
modules/antiflood-tokens/contracts/token-allocation-record/: Cargo.toml
modules/antiflood-tokens/delegates/token-generator/: Cargo.toml
modules/antiflood-tokens/interfaces/: Cargo.toml
modules/antiflood-tokens/interfaces/src/: lib.rs
modules/mail-local-state/src/: lib.rs
published-contract/: contract-id.txt  facade-id.txt  facade.wasm  web_container_contract.wasm
scripts/: build-facade-snapshot-linux.sh
ui/: Cargo.toml
ui/src/: aft.rs  api.rs  app.rs  inbox.rs  local_state.rs  log.rs
ui/src/app/: address_book.rs  login.rs  settings.rs
ui/tests/: live-node.spec.ts  production-liveness.spec.ts
