# Standalone single-member workspace — required by fdev's
# `get_workspace_target_dir()` (panics if no [workspace] is found
# walking upward from the crate dir).
[workspace]

[package]
name = "freenet-token-allocation-record"
version = "0.1.0"
edition = "2024"
license = "LGPL-3.0-or-later"
publish = false

# Issue #199. EXCLUDED from the freenet-email workspace ([workspace.exclude]
# in the root Cargo.toml). Has its own Cargo.lock so workspace dep churn
# (dioxus, chrono bumps for the UI side) cannot rotate this contract's
# wasm bytes. Rotation orphans every user's AFT token ledger; the whole
# point of #199 Phase A is to make rotation impossible without an
# explicit edit to the pins below.
#
# All deps pinned with `=` so cargo cannot pick a higher
# semver-compatible release. Bumping any of these MUST be paired with
# the per-identity migration story (#199 Phase B).

[dependencies]
bincode = "=1.3.3"
chrono = { version = "=0.4.44", default-features = false, features = ["alloc", "serde"] }
freenet-stdlib = { version = "=0.3.5", features = ["contract"] }
ml-dsa = { version = "=0.1.0-rc.8", default-features = false, features = ["alloc", "rand_core"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"

freenet-aft-interface = { path = "../../interfaces" }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# `freenet-main-contract` emits the extern "C" FFI wrapper via the
# #[contract] macro. Only valid when targeting wasm; enable explicitly via
# `fdev build` / cargo-make build-token-allocation-record target.
default = []
freenet-main-contract = []

# Mirror the freenet-email workspace's wasm release profile so cross-
# workspace builds produce identical bytes for the same source.
[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
panic = "abort"
