# Standalone single-member workspace — required by fdev's
# `get_workspace_target_dir()` (panics if no [workspace] is found
# walking upward from the crate dir).
[workspace]

[package]
name = "freenet-token-generator"
version = "0.1.0"
edition = "2024"
license = "LGPL-3.0-or-later"
publish = false

# Issue #199. EXCLUDED from the freenet-email workspace ([workspace.exclude]
# in the root Cargo.toml). Has its own Cargo.lock so workspace dep churn
# cannot rotate this delegate's wasm bytes. See sibling
# token-allocation-record/Cargo.toml for the full rationale.

[dependencies]
bincode = "=1.3.3"
bs58 = "=0.5.1"
freenet-stdlib = "=0.3.5"
ml-dsa = { version = "=0.1.0-rc.8", default-features = false, features = ["alloc", "rand_core"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"

freenet-aft-interface = { path = "../../interfaces" }

[target.'cfg(target_family = "wasm")'.dependencies]
chrono = { version = "=0.4.44", default-features = false, features = ["alloc", "serde"] }
freenet-stdlib = { version = "=0.3.5", features = ["contract"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
chrono = { version = "=0.4.44", default-features = false, features = ["clock", "alloc", "serde"] }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
arbitrary = "=1.4.2"
chacha20poly1305 = "=0.10.1"
rand = { version = "=0.8.5", features = ["std"] }
rand_chacha = "=0.3.1"
freenet-stdlib = { version = "=0.3.5", features = ["testing"] }
tracing-subscriber = { version = "=0.3.23", features = ["env-filter", "fmt"] }

[lib]
crate-type = ["cdylib"]

[features]
# `freenet-main-delegate` emits the extern "C" FFI wrapper via the
# #[delegate] macro. Only valid when targeting wasm; enable explicitly via
# `fdev build` / cargo-make build-token-generator target.
default = []
freenet-main-delegate = []

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
panic = "abort"
